[project]
name = "4-el"
version = "0.1.0"
description = ""
authors = [
    {name = "Primero1800",email = "Primero@inbox.ru"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "uvicorn[standard] (>=0.34.0,<0.35.0)",
    "pydantic[email] (>=2.11.2,<3.0.0)",
    "pydantic-settings (>=2.8.1,<3.0.0)",
    "sqlalchemy[asyncio] (>=2.0.40,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "alembic (>=1.15.2,<2.0.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "orjson (>=3.10.16,<4.0.0)",
    "fastapi (>=0.115.12,<0.116.0)",
    "asyncio (>=3.4.3,<4.0.0)",
    "fastapi-users[sqlalchemy] (>=14.0.1,<15.0.0)",
    "fastapi-mail (>=1.4.2,<2.0.0)",
    "celery (>=5.5.1,<6.0.0)",
    "redis (>=5.2.1,<6.0.0)",
    "flower (>=2.0.1,<3.0.0)",
    "fastapi-filters (>=0.3.0,<0.4.0)",
    "fastapi-filter (>=2.0.1,<3.0.0)",
    "aioredis (>=2.0.1,<3.0.0)",
    "fastapi-sessions (>=0.3.2,<0.4.0)",
    "slugify (>=0.0.1,<0.0.2)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
